--- a/index.html
+++ b/index.html
@@ -10,14 +10,32 @@
   <body>
     <header>
       <div class="head-top flex-centered">
-        <div class="head-nav flex-centered">
-          <div class="head-logo"></div>
-          <div class="head-link"></div>
-          <div class="head-login"></div>
+        <div class="head-nav">
+          <img class="head-logo" src="img/logo.svg" alt="logo" />
+
+          <ul class="head-link flex-centered">
+            <li>Scarica</li>
+            <li>Perchè Discord</li>
+            <li>Nitro</li>
+            <li>Sicurezza</li>
+            <li>Assistenza</li>
+          </ul>
+
+          <button class="head-login">accedi</button>
         </div>
       </div>
       <div class="head-main flex-centered">
-        <div class="head-subject"></div>
+        <div class="head-subject flex-column-centered">
+          <h1>Il tuo posto per parlare</h1>
+          <p>
+            che tu faccia parte di un club scolastico, gruppo di gamer, comunita
+            artistica mondiale, o semplicemente di un piccolo gruppo di amici
+            che vuole passare il tempo insieme, Discord rende più facile
+            chiacchierare ogni giorno e ritrovarsi più spesso.
+          </p>
+          <button>Scarica per il Mac</button>
+          <button>Apri Discord nel tuo browser</button>
+        </div>
       </div>
     </header>
     <main>
