--- a/index.html
+++ b/index.html
@@ -58,20 +58,43 @@
       <!-- MAIN SECTION-->
       <div class="main-section flex-centered">
         <div class="container flex-centered">
-          <div class="photo"></div>
-          <div class="text"></div>
+          <div class="photo"><img src="img/item1.svg" /></div>
+          <div class="text">
+            <h2>
+              Un luogo a invito con tutto lo spazio necessario per parlare
+            </h2>
+            <p>
+              I server Discord son organizzati in canali tematici in cui puoi
+              collaborare,condividere o semplicemente parlare della tua giornata
+              senza intasare una chat di gruppo.
+            </p>
+          </div>
         </div>
       </div>
       <div class="bgg main-section flex-centered">
         <div class="container flex-centered">
-          <div class="text"></div>
-          <div class="photo"></div>
+          <div class="text">
+            <h2>Dove trovarsi é facile</h2>
+            <p>
+              Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel
+              tuo server possono vedere che sei lì e unirsi istantaneamente
+              senza dover chiamare.
+            </p>
+          </div>
+          <div class="photo"><img src="img/item2.svg" /></div>
         </div>
       </div>
       <div class="main-section flex-centered">
         <div class="container flex-centered">
-          <div class="photo"></div>
-          <div class="text"></div>
+          <div class="photo"><img src="img/item3.svg" /></div>
+          <div class="text">
+            <h2>Da pochi a un fandom</h2>
+            <p>
+              Dai inizio a una community di qualsiasi dimensione con strumenti
+              di moderazione e accesso ai membri personalizzabile. Concedi ai
+              membri poteri speciali, crea canali privati, e molto altro
+            </p>
+          </div>
         </div>
       </div>
 
