--- a/index.html
+++ b/index.html
@@ -43,13 +43,11 @@
             chiacchierare ogni giorno e ritrovarsi più spesso.
           </p>
           <div>
-            <button class="button-top">
+            <button class="button">
               <i class="fa-solid fa-arrow-down"></i>Scarica per il Mac
             </button>
 
-            <button class="button-top browser">
-              Apri Discord nel tuo browser
-            </button>
+            <button class="button browser">Apri Discord nel tuo browser</button>
           </div>
         </div>
       </div>
@@ -97,10 +95,28 @@
           </div>
         </div>
       </div>
-
+      <!-- main secti
+        on end-->
       <div class="bgg main-end flex-centered">
         <div class="container-end flex-centered">
-          <div class="last-content"></div>
+          <div class="last-content">
+            <h2>Tecnologia affidabile per tenersi in contatto</h2>
+            <p>
+              Video e audio a bassa latenza ti faranno sentire come se foste
+              tutti nella stessa stanza. Fai ciao in video, guarda gli amici
+              giocare in streaming, o riunitevi in una sessione di disegno con
+              la condivisione schermo.
+            </p>
+            <img src="img/item4-big.svg" alt="videocall" />
+            <div>
+              <h3>Pronto a iniziare la tua avventura?</h3>
+            </div>
+            <div>
+              <button class="button btn-main">
+                <i class="fa-solid fa-arrow-down"></i>Scarica per il Mac
+              </button>
+            </div>
+          </div>
         </div>
       </div>
     </main>
