--- a/index.html
+++ b/index.html
@@ -123,12 +123,71 @@
     <footer>
       <div class="footer-top">
         <div class="footer-container-top">
-          <div class="social"></div>
+          <div class="social">
+            <h2>Il tuo posto per parlare</h2>
+            <p>
+              <img
+                class="ita-flag"
+                src="img/ita.png"
+                alt="italy flag"
+              />Italiano<i class="fa-solid fa-angle-down"></i>
+            </p>
+            <p>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+              <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            </p>
+          </div>
           <div class="info-box">
-            <div class="info"></div>
-            <div class="info"></div>
-            <div class="info"></div>
-            <div class="info"></div>
+            <ul class="info">
+              <li>Prodotto</li>
+              <li>Scarica</li>
+
+              <li>Perche Discord</li>
+
+              <li>Nitro</li>
+              <li>Sicurezza</li>
+              <li>assistenza</li>
+            </ul>
+            <ul class="info">
+              <li>Compagnia</li>
+              <li>Chi siamo</li>
+
+              <li>Lavora con noi</li>
+
+              <li>Marchio</li>
+              <li>Redazione</li>
+              <li>Negozio</li>
+            </ul>
+            <ul class="info">
+              <li>Risorse</li>
+              <li>Scarica</li>
+
+              <li>Perche Discord</li>
+
+              <li>Nitro</li>
+              <li>Sicurezza</li>
+              <li>Assistenza</li>
+              <li>Scarica</li>
+
+              <li>Perche Discord</li>
+
+              <li>Nitro</li>
+              <li>Sicurezza</li>
+              <li>Assistenza</li>
+              <li>Assistenza</li>
+            </ul>
+            <ul class="info">
+              <li>Norme</li>
+              <li>Scarica</li>
+
+              <li>Perche Discord</li>
+
+              <li>Nitro</li>
+              <li>Sicurezza</li>
+              <li>assistenza</li>
+            </ul>
           </div>
         </div>
       </div>
