--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
         </div>
       </div>
     </main>
+    <!-- footer top -->
     <footer>
       <div class="footer-top">
         <div class="footer-container-top">
@@ -191,10 +192,11 @@
           </div>
         </div>
       </div>
+      <!-- footer end -->
       <div class="footer-end">
         <div class="footer-container-end">
-          <div class="logo"></div>
-          <div class="button"></div>
+          <div class="logo"><img src="img/logo.svg" alt="logo" /></div>
+          <button class="button-end">Registrati</button>
         </div>
       </div>
     </footer>
