w3 validator html and css

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
       <!-- MAIN SECTION-->
       <div class="main-section flex-centered">
         <div class="container flex-centered">
-          <div class="photo"><img src="img/item1.svg" /></div>
+          <div class="photo">
+            <img src="img/item1.svg" alt="chat group" />
+          </div>
           <div class="text">
             <h2>
               Un luogo a invito con tutto lo spazio necessario per parlare
@@ -79,12 +81,16 @@
               senza dover chiamare.
             </p>
           </div>
-          <div class="photo"><img src="img/item2.svg" /></div>
+          <div class="photo">
+            <img src="img/item2.svg" alt="voice chat group" />
+          </div>
         </div>
       </div>
       <div class="main-section flex-centered">
         <div class="container flex-centered">
-          <div class="photo"><img src="img/item3.svg" /></div>
+          <div class="photo">
+            <img src="img/item3.svg" alt="fandom group" />
+          </div>
           <div class="text">
             <h2>Da pochi a un fandom</h2>
             <p>
