--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
           </div>
         </div>
       </div>
+      <div class="wave"></div>
       <div class="bgg main-section flex-centered">
         <div class="container flex-centered">
           <div class="text">
@@ -86,6 +87,7 @@
           </div>
         </div>
       </div>
+      <div class="wave rotate"></div>
       <div class="main-section flex-centered">
         <div class="container flex-centered">
           <div class="photo">
@@ -103,6 +105,7 @@
       </div>
       <!-- main secti
         on end-->
+      <div class="wave"></div>
       <div class="bgg main-end flex-centered">
         <div class="container-end flex-centered">
           <div class="last-content">
